# FEM-Projects-using-python-c-

./: CMakeLists.txt  README.md  class  class.cpp  functions  functions.cpp  iterators  iterators.cpp  main.cpp  main1  main1.cpp  pointers  pointers.cpp  solver
